@@ -1,6 +1,7 @@
 - fix using iso CD2 on disk (#33022):
   o remove " from medium name when reading media.cfg
   o handle "Volume id" ending with -CD[123] instead of -Disc[123]
+- handle @::auto_steps in patch-oem.pl
 
 Version 10.4.214 - 26 September 2007, by Thierry Vignaud
 
